Adding README, updating style.css header

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:     Hello Elementor Child
-Theme URI:      
-Description:    Hello-elementor child theme.
+Theme URI:      https://github.com/mwender/hello-elementor-child
+Description:    Hello Eelementor child theme.
 Author:         Michael Wender
 Author URI:     https://mwender.com
 Template:       hello-elementor
