Moving functions into lib/fns/

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name:     Hello Elementor Child
+Theme Name:     Hello Elementor Child for Oaks Ministries
 Theme URI:      https://github.com/mwender/hello-elementor-child
-Description:    Hello Eelementor child theme.
-Author:         Michael Wender
+Description:    Hello Elementor child theme developed for oaksministries.com
+Author:         TheWebist
 Author URI:     https://mwender.com
 Template:       hello-elementor
 Version:        1.0.1
