--- a/style.css
+++ b/style.css
@@ -7,3 +7,37 @@ Author URI:     https://mwender.com
 Template:       hello-elementor
 Version:        1.0.1
 */
+.elementor-widget-woocommerce-my-account .e-my-account-tab__ .woocommerce-MyAccount-content-wrapper{
+  border: 1px var(--sections-border-type,solid) var(--sections-border-color,#d4d4d4);
+  border-radius: var(--sections-border-radius,3px);
+}
+/*
+.elementor-widget-woocommerce-my-account .e-my-account-tab__ .woocommerce-MyAccount-content-wrapper .elementor-heading-title{
+  margin: 0 0 .25em 0;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+*/
+/*
+.elementor-widget-woocommerce-my-account .e-my-account-tab__ .woocommerce-MyAccount-content-wrapper .elementor-widget-video{
+  margin-bottom: 3em;
+}
+*/
+.oaksmin-loader-wrap{
+  border: 1px solid #d4d4d4;
+  border-radius: 10px;
+  padding: 1em;
+  margin: 1em;
+}
+.oaksmin-loader{
+  height: 60px;
+  display: block;
+  margin: 1em;
+  border-radius: 10px;
+  background: url(lib/img/oaksmin-loader.gif) center center;
+  background-size: 90px 90px;
+  background-repeat: no-repeat;
+}
+.oaksmin-loader-note{
+  text-align: center;
+}
